; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_jazz_esp.c_jazz_esp_write8.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_jazz_esp.c_jazz_esp_write8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.esp = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.esp*, i32, i64)* @jazz_esp_write8 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @jazz_esp_write8(%struct.esp* %0, i32 %1, i64 %2) #0 {
  %4 = alloca %struct.esp*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store %struct.esp* %0, %struct.esp** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %7 = load i32, i32* %5, align 4
  %8 = load %struct.esp*, %struct.esp** %4, align 8
  %9 = getelementptr inbounds %struct.esp, %struct.esp* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* %6, align 8
  %12 = add i64 %10, %11
  %13 = inttoptr i64 %12 to i32*
  store volatile i32 %7, i32* %13, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
